Download cURL CA collection at build time.

--- a/.github/workflows/app-macos.yml
+++ b/.github/workflows/app-macos.yml
@@ -111,6 +111,7 @@ jobs:
           cp $(which composer) composer.phar
           phar extract -f composer.phar ./composer
           rm composer.phar
+          curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           yarn run build
           yarn run make
 
