--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -64,6 +64,7 @@ jobs:
           cp $(which composer) composer.phar
           php.exe /c/tools/php/pharcommand.phar extract -f composer.phar ./composer
           rm composer.phar
+          curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           yarn run build
           yarn run make
 
