Fix build bug that results in settings.local.php not being copied into the Drupal site.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -26,10 +26,11 @@ electronFuses:
   enableNodeCliInspectArguments: false
   onlyLoadAppFromAsar: false
 
-# In conjunction with `files` below, ensure that the PHP and Composer executables
-# are in the app's resources directory, not the ASAR archive.
 extraResources:
+  # In conjunction with `files` below, ensure that the PHP and Composer executables
+  # are in the app's resources directory, not the ASAR archive.
   - 'bin/**'
+  - settings.local.php
 
 files:
   - '!**/bin/**'
