--- a/.github/workflows/app-macos.yml
+++ b/.github/workflows/app-macos.yml
@@ -61,10 +61,6 @@ jobs:
           mkdir -p ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles
           cp $PROVISION_PROFILE_PATH ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles
 
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          tools: composer
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -93,6 +89,25 @@ jobs:
         with:
           name: php-macos
 
+      - name: Determine latest Composer version
+        id: composer-latest
+        uses: pozetroninc/github-action-get-latest-release@master
+        with:
+          repository: composer/composer
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Check out latest Composer release
+        uses: actions/checkout@v4
+        with:
+          repository: composer/composer
+          ref: ${{ steps.composer-latest.outputs.release }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: './bin/composer'
+
+      - name: Clean up Composer code base
+        run: rm -r -f .git doc phpstan tests
+        working-directory: './bin/composer'
+
       # Only notarize tagged releases; Electron Builder skips notarization if
       # these environment variables are undefined.
       - name: Enable notarization for tagged release
@@ -104,14 +119,9 @@ jobs:
 
       - name: Create application bundle
         run: |
-          mkdir -p bin
           chmod +x php
           mv php bin
-          cd bin
-          cp $(which composer) composer.phar
-          phar extract -f composer.phar ./composer
-          rm composer.phar
-          curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
+          curl https://curl.haxx.se/ca/cacert.pem --fail --location --output ./bin/cacert.pem
           yarn run build
           yarn run make
 
