--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -74,7 +74,7 @@ jobs:
         shell: bash
         run: |
           mv php.exe bin
-          curl https://curl.haxx.se/ca/cacert.pem --fail --location --output ./bin/cacert.pem
+          curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           yarn run build
           yarn run make
 
