--- a/.github/workflows/php-macos.yml
+++ b/.github/workflows/php-macos.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build-arch:
-    name: Build for ${{ runner.arch }}
+    name: Build on ${{ matrix.os }}
     strategy:
       matrix:
         os:
