--- a/.github/workflows/php-linux.yml
+++ b/.github/workflows/php-linux.yml
@@ -77,6 +77,6 @@ jobs:
       - uses: actions/upload-artifact@v4
         id: artifact
         with:
-          name: php-linux-${{ runner.arch }}
+          name: php-linux-${{ inputs.runner }}
           path: buildroot/bin
           overwrite: true
