--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -54,16 +54,19 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           artifact-ids: ${{ needs.php.outputs.artifact-id }}
+          path: bin
+
+      - name: Extract Composer
+        shell: bash
+        run: |
+          cp $(which composer) composer.phar
+          php.exe /c/tools/php/pharcommand.phar extract -f composer.phar ./composer
+          rm composer.phar
+        working-directory: bin
 
       - name: Create application bundle
         shell: bash
         run: |
-          mkdir -p bin
-          mv php.exe bin
-          cd bin
-          cp $(which composer) composer.phar
-          php.exe /c/tools/php/pharcommand.phar extract -f composer.phar ./composer
-          rm composer.phar
           curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           yarn run build
           yarn run make
