--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -50,14 +50,17 @@ jobs:
 #        if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
 
+      # For reference -- this will extract the uploaded artifact (which is a ZIP file)
+      # into a directory named after the artifact.
       - name: Download PHP interpreter
         uses: actions/download-artifact@v4
         with:
           artifact-ids: ${{ needs.php.outputs.artifact-id }}
-          path: bin
+
+      - name: Create bin directory
+        run: mv php-windows bin
 
       - name: Extract Composer
-        shell: bash
         run: |
           cp $(which composer) composer.phar
           php.exe /c/tools/php/pharcommand.phar extract -f composer.phar ./composer
@@ -65,7 +68,6 @@ jobs:
         working-directory: bin
 
       - name: Create application bundle
-        shell: bash
         run: |
           curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           yarn run build
