--- a/.github/workflows/app-macos.yml
+++ b/.github/workflows/app-macos.yml
@@ -91,7 +91,17 @@ jobs:
       - name: Download PHP interpreter
         uses: actions/download-artifact@v4
         with:
-          name: php-macos
+          artifact-ids: ${{ needs.php.outputs.artifact-id }}
+
+      - name: Create bin directory
+        run: mv php-macos bin
+
+      - name: Extract Composer
+        run: |
+          cp $(which composer) composer.phar
+          phar extract -f composer.phar ./composer
+          rm composer.phar
+        working-directory: bin
 
       # Only notarize tagged releases; Electron Builder skips notarization if
       # these environment variables are undefined.
@@ -104,13 +114,7 @@ jobs:
 
       - name: Create application bundle
         run: |
-          mkdir -p bin
-          chmod +x php
-          mv php bin
-          cd bin
-          cp $(which composer) composer.phar
-          phar extract -f composer.phar ./composer
-          rm composer.phar
+          chmod +x ./bin/php
           curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           yarn run build
           yarn run make
