--- a/.github/workflows/php-windows.yml
+++ b/.github/workflows/php-windows.yml
@@ -24,7 +24,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: crazywhalecc/static-php-cli
-          ref: 2.6.1
+          # Temporarily use `main` until https://github.com/crazywhalecc/static-php-cli/issues/820 is
+          # released (in 2.6.2 or later).
+          ref: main
 
       - name: Generate cache key
         shell: bash
