Temporarily pin Electron Builder to 26.0.16 until 26.0.19 or later is released with better DMG generation and a Yarn-related bug fix.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -49,7 +49,7 @@ mac:
   # By default, both a ZIP and a DMG are built. We only need a DMG.
   target: dmg
 
-portable:
+nsis:
   artifactName: 'Drupal CMS for Windows.${ext}'
 
 productName: 'Launch Drupal CMS'
