--- a/.github/workflows/app-macos.yml
+++ b/.github/workflows/app-macos.yml
@@ -103,15 +103,6 @@ jobs:
           rm composer.phar
         working-directory: bin
 
-      # Only notarize tagged releases; Electron Builder skips notarization if
-      # these environment variables are undefined.
-      - name: Enable notarization for tagged release
-        run: |
-          echo "APPLE_ID=${{ secrets.APPLE_ID }}" >> $GITHUB_ENV
-          echo "APPLE_APP_SPECIFIC_PASSWORD=${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}" >> $GITHUB_ENV
-          echo "APPLE_TEAM_ID=${{ secrets.APPLE_TEAM_ID }}" >> $GITHUB_ENV
-        if: startsWith(github.ref, 'refs/tags/')
-
       - name: Create application bundle
         run: |
           chmod +x ./bin/php
@@ -119,6 +110,9 @@ jobs:
           yarn run build
           yarn run make
         env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Delete PHP interpreter artifact
