--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,10 +1,7 @@
+# This is a global constant, don't change it.
 appId: 'org.drupal.cms-launcher'
 
-appImage:
-  artifactName: 'Drupal CMS for Linux (${arch}).${ext}'
-
 dmg:
-  artifactName: 'Drupal CMS for macOS (${arch}).${ext}'
   contents:
     - name: 'Launch Drupal CMS.app'
       # The coordinates refer to the *center* of the icon, not the top-left corner.
@@ -40,19 +37,19 @@ files:
   - '!**/src/**'
 
 linux:
+  artifactName: 'Drupal_CMS-Linux-${arch}.${ext}'
   # By default, an AppImage and a snap are built. For the moment, we'll stick with AppImage.
   target: AppImage
 
 mac:
+  artifactName: 'Drupal_CMS-macOS-${arch}.${ext}'
   # By default, both a ZIP and a DMG are built. We only need a DMG.
   target: dmg
-
-nsis:
-  artifactName: 'Drupal CMS for Windows.${ext}'
 
 productName: 'Launch Drupal CMS'
 
 win:
+  artifactName: 'Drupal_CMS-Windows.${ext}'
   azureSignOptions:
     certificateProfileName: drupal-association-cert-profile
     codeSigningAccountName: da-trusted-signing-001
