Revert "Rename built DMGs to specifically say "Intel" and "Apple silicon", for clarity."
This reverts commit 642db0b51d3de3ec6a063a676a9e3b798c4e0420.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -44,17 +44,17 @@ linux:
   target: AppImage
 
 mac:
-  # Build DMGs for both Intel and Apple silicon. Artifact names cannot contain spaces, or
-  # they will be renamed before being attached to a GitHub release.
+  # The artifact name cannot contain spaces, or it will be renamed before being attached
+  # to a GitHub release.
+  artifactName: 'Drupal_CMS-macOS-${arch}.${ext}'
+  # Build DMGs for both Intel and Apple silicon.
   target:
     -
       target: dmg
       arch: x64
-      artifactName: 'Drupal_CMS-macOS-Intel.${ext}'
     -
       target: dmg
       arch: arm64
-      artifactName: 'Drupal_CMS-macOS-Apple_silicon.${ext}'
 
 productName: 'Launch Drupal CMS'
 
