Build a universal bundle for macOS.

--- a/.github/workflows/app-linux.yml
+++ b/.github/workflows/app-linux.yml
@@ -83,7 +83,7 @@ jobs:
           chmod +x ./bin/php
           curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           yarn run build
-          yarn run make
+          npx electron-builder
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
