--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -46,22 +46,7 @@ linux:
 mac:
   # The artifact name cannot contain spaces, or it will be renamed before being attached
   # to a GitHub release.
-  artifactName: 'Drupal_CMS-macOS-${arch}.${ext}'
-  # Build for both Intel and Apple silicon. We need ZIP targets for auto-updating
-  # to work properly.
-  target:
-    -
-      target: dmg
-      arch: x64
-    -
-      target: zip
-      arch: x64
-    -
-      target: dmg
-      arch: arm64
-    -
-      target: zip
-      arch: arm64
+  artifactName: 'Drupal_CMS-macOS.${ext}'
 
 productName: 'Launch Drupal CMS'
 
