--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -72,7 +72,7 @@ jobs:
         run: |
           curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           yarn run build
-          yarn run make
+          npx electron-builder
         env:
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
