Revert "Only install production dependencies."
This reverts commit 9f073e959de6a9fc348db681a1b4eaf934dc24bf.

--- a/.github/workflows/app-linux.yml
+++ b/.github/workflows/app-linux.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Install dependencies
 #        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn workspaces focus --all --production
+        run: yarn install
 
       - name: Download PHP interpreter
         uses: actions/download-artifact@v4
