--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -15,10 +15,10 @@ jobs:
     name: Build
     runs-on: windows-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       PHP_EXTENSIONS: bz2,ctype,curl,dom,filter,gd,iconv,mbstring,opcache,openssl,pdo,pdo_sqlite,phar,session,simplexml,sqlite3,tokenizer,xml,xmlwriter,yaml,zip,zlib
       PHP_LIBRARIES: libjpeg,libavif,freetype,libwebp
       PHP_VERSION: 8.3
+      PUBLISH: never
     steps:
       - uses: actions/checkout@v4
 
@@ -46,6 +46,50 @@ jobs:
         run: |
           composer require crazywhalecc/static-php-cli:dev-main
           composer exec spc doctor
-          composer exec spc download --with-php="${{ env.PHP_VERSION }}" --for-extensions="${{ env.PHP_EXTENSIONS }}" --prefer-pre-built
-          composer exec spc build "${{ env.PHP_EXTENSIONS }}" --build-cli --with-libs="${{ env.PHP_LIBRARIES }}" --debug
+          composer exec spc -- download --with-php="${{ env.PHP_VERSION }}" --for-extensions="${{ env.PHP_EXTENSIONS }}" --prefer-pre-built
+          composer exec spc -- build "${{ env.PHP_EXTENSIONS }}" --build-cli --with-libs="${{ env.PHP_LIBRARIES }}" --debug
         working-directory: build
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: latest
+
+      - name: Set up Yarn
+        run: |
+          corepack enable
+          yarn set version berry
+
+# Dependency caching is temporarily disabled due to https://github.com/npm/cli/issues/4828.
+#      - name: Cache dependencies
+#        id: cache-yarn
+#        uses: actions/cache@v4
+#        with:
+#          path: node_modules
+#          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+
+      - name: Install dependencies
+#       if: steps.cache-yarn.outputs.cache-hit != 'true'
+        run: yarn install
+
+      - name: Enable code signing and publishing for release branch
+        if: github.ref_name == 'main'
+        run: |
+          echo "AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}" >> $GITHUB_ENV
+          echo "AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}" >> $GITHUB_ENV
+          echo "AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}" >> $GITHUB_ENV
+          echo "PUBLISH=onTagOrDraft" >> $GITHUB_ENV
+
+      - name: Extract Composer and make application
+        run: |
+          cp ./build/buildroot/bin/php.exe ./bin
+          cp $(which composer) composer.phar
+          php.exe /c/tools/php/pharcommand.phar extract -f composer.phar ./bin/composer
+          rm composer.phar
+          curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
+          ls -lR bin
+          yarn run build
+          npx electron-builder --publish=${{ env.PUBLISH }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
