--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,4 +1,4 @@
-name: Windows
+name: Linux
 
 on:
   push:
@@ -10,15 +10,21 @@ on:
   workflow_call:
   workflow_dispatch:
 
+env:
+  PHP_EXTENSIONS: bz2,ctype,curl,dom,filter,gd,iconv,mbstring,opcache,openssl,pcntl,pdo,pdo_sqlite,phar,posix,session,simplexml,sodium,sqlite3,tokenizer,xml,xmlwriter,yaml,zip,zlib
+  PHP_LIBRARIES: freetype,libavif,libjpeg,libwebp
+  PHP_VERSION: 8.3
+  PUBLISH: never
+
 jobs:
   build:
-    name: Build
-    runs-on: windows-latest
-    env:
-      PHP_EXTENSIONS: bz2,ctype,curl,dom,filter,gd,iconv,mbstring,opcache,openssl,pdo,pdo_sqlite,phar,session,simplexml,sqlite3,tokenizer,xml,xmlwriter,yaml,zip,zlib
-      PHP_LIBRARIES: libjpeg,libavif,freetype,libwebp
-      PHP_VERSION: 8.3
-      PUBLISH: never
+    name: Build on ${{ matrix.runner }}
+    strategy:
+      matrix:
+        runner:
+          - ubuntu-latest
+          - ubuntu-22.04-arm
+    runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v4
 
@@ -30,7 +36,7 @@ jobs:
       - name: Generate cache key
         shell: bash
         run: |
-          CACHE_KEY=${{ runner.os }}-$PHP_VERSION-$(echo $PHP_EXTENSIONS | tr ',' '-')
+          CACHE_KEY=${{ runner.os }}-${{ runner.arch }}-$PHP_VERSION-$(echo $PHP_EXTENSIONS | tr ',' '-')
           echo "CACHE_KEY=${CACHE_KEY}" >> "$GITHUB_ENV"
 
       # Cache the built PHP interpreter.
@@ -44,9 +50,9 @@ jobs:
       - if: steps.cache-php.outputs.cache-hit != 'true'
         name: Build PHP interpreter
         run: |
-          composer require crazywhalecc/static-php-cli:dev-main
-          composer exec spc -- doctor
+          composer install
           composer exec spc -- download --with-php="${{ env.PHP_VERSION }}" --for-extensions="${{ env.PHP_EXTENSIONS }}" --prefer-pre-built
+          composer exec spc -- doctor
           composer exec spc -- build "${{ env.PHP_EXTENSIONS }}" --build-cli --with-libs="${{ env.PHP_LIBRARIES }}" --debug
         working-directory: build
 
@@ -62,34 +68,31 @@ jobs:
 
 # Dependency caching is temporarily disabled due to https://github.com/npm/cli/issues/4828.
 #      - name: Cache dependencies
-#        id: cache-yarn
+#        id: cache
 #        uses: actions/cache@v4
 #        with:
 #          path: node_modules
 #          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
 
       - name: Install dependencies
-#       if: steps.cache-yarn.outputs.cache-hit != 'true'
+#       if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
 
-      - name: Enable code signing and publishing for release branch
+      - name: Enable publishing for release branch
         if: github.ref_name == 'main'
         run: |
-          echo "AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}" >> $GITHUB_ENV
-          echo "AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}" >> $GITHUB_ENV
           echo "PUBLISH=onTagOrDraft" >> $GITHUB_ENV
 
       - name: Extract Composer and make application
         run: |
-          cp ./build/buildroot/bin/php.exe ./bin
+          cp ./build/buildroot/bin/php ./bin
           cp $(which composer) composer.phar
-          php.exe /c/tools/php/pharcommand.phar extract -f composer.phar ./bin/composer
+          phar extract -f composer.phar ./composer
           rm composer.phar
+          chmod +x ./bin/php
           curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           ls -lR bin
           yarn run build
           npx electron-builder --publish=${{ env.PUBLISH }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        shell: bash
