--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -11,9 +11,13 @@ on:
   workflow_dispatch:
 
 env:
+  # The extensions and libraries needed to build PHP. These need to be variables so we can
+  # use them to generate a cache key.
+  # @see https://static-php.dev/en/guide/cli-generator.html
   PHP_EXTENSIONS: bz2,ctype,curl,dom,filter,gd,iconv,mbstring,opcache,openssl,pcntl,pdo,pdo_sqlite,phar,posix,session,simplexml,sodium,sqlite3,tokenizer,xml,xmlwriter,yaml,zip,zlib
   PHP_LIBRARIES: freetype,libavif,libjpeg,libwebp
   PHP_VERSION: 8.3
+  # Don't publish by default. This is overridden for the release branch, below.
   PUBLISH: never
 
 jobs:
@@ -31,15 +35,19 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          tools: composer
+          # Install PHP with the tools needed to build the interpreter, if necessary.
+          php-version: latest
+          tools: pecl, composer
+          extensions: curl, openssl, mbstring, tokenizer
+          ini-values: memory_limit=-1
 
+      # Cache the built binary so we can skip the build steps if there is a cache hit.
       - name: Generate cache key
         shell: bash
         run: |
-          CACHE_KEY=${{ runner.os }}-${{ runner.arch }}-$PHP_VERSION-$(echo $PHP_EXTENSIONS | tr ',' '-')
+          CACHE_KEY=${{ runner.os }}-${{ runner.arch }}-$PHP_VERSION--$(echo $PHP_EXTENSIONS | tr ',' '-')
           echo "CACHE_KEY=${CACHE_KEY}" >> "$GITHUB_ENV"
 
-      # Cache the built PHP interpreter.
       - id: cache-php
         name: Cache binaries
         uses: actions/cache@v4
@@ -48,11 +56,11 @@ jobs:
           key: php-${{ env.CACHE_KEY }}
 
       - if: steps.cache-php.outputs.cache-hit != 'true'
-        name: Build PHP interpreter
+        name: Install dependencies and build PHP
         run: |
           composer install
-          composer exec spc -- download --with-php="${{ env.PHP_VERSION }}" --for-extensions="${{ env.PHP_EXTENSIONS }}" --prefer-pre-built
           composer exec spc -- doctor
+          composer exec spc -- download --with-php="${{ env.PHP_VERSION }}" --for-extensions="${{ env.PHP_EXTENSIONS }}" --prefer-pre-built
           composer exec spc -- build "${{ env.PHP_EXTENSIONS }}" --build-cli --with-libs="${{ env.PHP_LIBRARIES }}" --debug
         working-directory: build
 
@@ -96,3 +104,11 @@ jobs:
           npx electron-builder --publish=${{ env.PUBLISH }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload distributable
+        if: ${{ env.PUBLISH == 'never' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: app
+          path: dist/*.AppImage
+          retention-days: 7
