--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -14,6 +14,9 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
+  # The PHP interpreter needs to be its own job so it can be built for both x64 and arm64
+  # architectures in parallel, before being merged into a universal binary while building
+  # the app itself.
   php:
     name: Build PHP on ${{ matrix.os }}
     strategy:
@@ -23,6 +26,9 @@ jobs:
           - macos-14 # arm64
     runs-on: ${{ matrix.os }}
     env:
+      # The extensions and libraries needed to build PHP. These need to be variables so we can
+      # use them to generate a cache key.
+      # @see https://static-php.dev/en/guide/cli-generator.html
       PHP_EXTENSIONS: bz2,ctype,curl,dom,filter,gd,iconv,mbstring,opcache,openssl,pcntl,pdo,pdo_sqlite,phar,posix,session,simplexml,sodium,sqlite3,tokenizer,xml,xmlwriter,yaml,zip,zlib
       PHP_LIBRARIES: freetype,libavif,libjpeg,libwebp
       PHP_VERSION: 8.3
@@ -31,19 +37,6 @@ jobs:
         with:
           repository: crazywhalecc/static-php-cli
           ref: 2.6.1
-
-      - name: Generate cache key
-        run: |
-          CACHE_KEY=${{ runner.os }}-${{ runner.arch }}-$PHP_VERSION--$(echo $PHP_EXTENSIONS | tr ',' '-')
-          echo "CACHE_KEY=${CACHE_KEY}" >> $GITHUB_ENV
-
-      # Cache the built binaries so we can skip the build steps if there is a cache hit.
-      - id: cache
-        name: Cache binaries
-        uses: actions/cache@v4
-        with:
-          path: buildroot/bin
-          key: php-${{ env.CACHE_KEY }}
 
       - if: steps.cache.outputs.cache-hit != 'true'
         name: "Set up PHP"
@@ -54,11 +47,25 @@ jobs:
           extensions: curl, openssl, mbstring, tokenizer
           ini-values: memory_limit=-1
 
+      # Cache the built binary so we can skip the build steps if there is a cache hit.
+      - name: Generate cache key
+        run: |
+          CACHE_KEY=${{ runner.os }}-${{ runner.arch }}-$PHP_VERSION--$(echo $PHP_EXTENSIONS | tr ',' '-')
+          echo "CACHE_KEY=${CACHE_KEY}" >> $GITHUB_ENV
+
+      - id: cache
+        name: Cache binaries
+        uses: actions/cache@v4
+        with:
+          path: buildroot/bin
+          key: php-${{ env.CACHE_KEY }}
+
       - if: steps.cache.outputs.cache-hit != 'true'
         name: Install dependencies and build PHP
         run: |
           brew install automake gzip
           composer install --no-dev
+          ./bin/spc doctor
           ./bin/spc download --with-php=${{ env.PHP_VERSION }} --for-extensions=${{ env.PHP_EXTENSIONS }} --prefer-pre-built
           ./bin/spc build ${{ env.PHP_EXTENSIONS }} --build-cli --with-libs="${{ env.PHP_LIBRARIES }}" --debug
 
@@ -75,6 +82,7 @@ jobs:
     needs:
       - php
     env:
+      # Don't publish by default. This is overridden for the release branch, below.
       PUBLISH: never
     steps:
       - uses: actions/checkout@v4
@@ -91,7 +99,34 @@ jobs:
           name: php-X64
           path: build/php-x64
 
-      # Set up the code signing certificate. This was copied from the example in
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          tools: composer
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: latest
+
+      - name: Set up Yarn
+        run: |
+          corepack enable
+          yarn set version berry
+
+# Dependency caching is temporarily disabled due to https://github.com/npm/cli/issues/4828.
+#      - name: Cache dependencies
+#        id: cache
+#        uses: actions/cache@v4
+#        with:
+#          path: node_modules
+#          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+
+      - name: Install dependencies
+#       if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install
+
+      # This was copied from the example in
       # https://docs.github.com/en/actions/use-cases-and-examples/deploying/installing-an-apple-certificate-on-macos-runners-for-xcode-development.
       - name: Set up code signing
         env:
@@ -124,36 +159,10 @@ jobs:
           mkdir -p ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles
           cp $PROVISION_PROFILE_PATH ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles
 
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          tools: composer
-
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: latest
-
-      - name: Set up Yarn
-        run: |
-          corepack enable
-          yarn set version berry
-
-# Dependency caching is temporarily disabled due to https://github.com/npm/cli/issues/4828.
-#      - name: Cache dependencies
-#        id: cache
-#        uses: actions/cache@v4
-#        with:
-#          path: node_modules
-#          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
-
-      - name: Install dependencies
-#       if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install
-
-      - name: Enable notarization and publishing for release branch
+      - name: Enable notarization and publishing for the release branch
         if: github.ref_name == 'main'
         run: |
+          # Set environment variables so Electron Builder will notarize in the next step.
           echo "APPLE_ID=${{ secrets.APPLE_ID }}" >> $GITHUB_ENV
           echo "APPLE_APP_SPECIFIC_PASSWORD=${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}" >> $GITHUB_ENV
           echo "APPLE_TEAM_ID=${{ secrets.APPLE_TEAM_ID }}" >> $GITHUB_ENV
@@ -169,3 +178,11 @@ jobs:
           curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
           yarn run build
           npx electron-builder --universal --publish=${{ env.PUBLISH }}
+
+      - name: Upload distributable
+        if: ${{ env.PUBLISH == 'never' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: app
+          path: dist/*.dmg
+          retention-days: 7
