--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -10,14 +10,20 @@ on:
   workflow_call:
   workflow_dispatch:
 
+# Since only the x64 architecture is supported on Windows, there's only one job to
+# compile PHP and build the launcher.
 jobs:
   build:
     name: Build
     runs-on: windows-latest
     env:
+      # The extensions and libraries needed to build PHP. These need to be variables so we can
+      # use them to generate a cache key.
+      # @see https://static-php.dev/en/guide/cli-generator.html
       PHP_EXTENSIONS: bz2,ctype,curl,dom,filter,gd,iconv,mbstring,opcache,openssl,pdo,pdo_sqlite,phar,session,simplexml,sqlite3,tokenizer,xml,xmlwriter,yaml,zip,zlib
       PHP_LIBRARIES: libjpeg,libavif,freetype,libwebp
       PHP_VERSION: 8.3
+      # Don't publish by default. This is overridden for the release branch, below.
       PUBLISH: never
     steps:
       - uses: actions/checkout@v4
@@ -25,15 +31,19 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          tools: composer
+          # Install PHP with the tools needed to build the interpreter, if necessary.
+          php-version: latest
+          tools: pecl, composer
+          extensions: curl, openssl, mbstring, tokenizer
+          ini-values: memory_limit=-1
 
+      # Cache the built binary so we can skip the build steps if there is a cache hit.
       - name: Generate cache key
         shell: bash
         run: |
           CACHE_KEY=${{ runner.os }}-$PHP_VERSION-$(echo $PHP_EXTENSIONS | tr ',' '-')
           echo "CACHE_KEY=${CACHE_KEY}" >> "$GITHUB_ENV"
 
-      # Cache the built PHP interpreter.
       - id: cache-php
         name: Cache binaries
         uses: actions/cache@v4
@@ -42,8 +52,10 @@ jobs:
           key: php-${{ env.CACHE_KEY }}
 
       - if: steps.cache-php.outputs.cache-hit != 'true'
-        name: Build PHP interpreter
+        name: Install dependencies and build PHP
         run: |
+          # Temporarily use the dev HEAD of static-php-cli until
+          # https://github.com/crazywhalecc/static-php-cli/issues/820 is released (in 2.6.2 or later).
           composer require crazywhalecc/static-php-cli:dev-main
           composer exec spc -- doctor
           composer exec spc -- download --with-php="${{ env.PHP_VERSION }}" --for-extensions="${{ env.PHP_EXTENSIONS }}" --prefer-pre-built
@@ -72,12 +84,9 @@ jobs:
 #       if: steps.cache-yarn.outputs.cache-hit != 'true'
         run: yarn install
 
-      - name: Enable code signing and publishing for release branch
+      - name: Enable publishing for release branch
         if: github.ref_name == 'main'
         run: |
-          echo "AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}" >> $GITHUB_ENV
-          echo "AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}" >> $GITHUB_ENV
           echo "PUBLISH=onTagOrDraft" >> $GITHUB_ENV
 
       - name: Extract Composer and make application
@@ -91,5 +100,16 @@ jobs:
           yarn run build
           npx electron-builder --publish=${{ env.PUBLISH }}
         env:
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: bash
+
+      - name: Upload distributable
+        if: ${{ env.PUBLISH == 'never' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: app
+          path: dist/*.exe
+          retention-days: 7
