--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "A quick-start launcher for Drupal CMS.",
   "main": "./out/main/main.js",
   "scripts": {
-    "build": "electron-vite build",
-    "start": "electron-vite preview",
-    "make": "electron-builder"
+    "start": "electron-vite preview"
   },
   "author": "Drupal Association",
   "license": "MIT",
