Revert "Move repeated build steps into make.sh"
This reverts commit e36c27f67166926c553716708aa23d6ec85b23dd.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -90,16 +90,18 @@ jobs:
         if: github.ref_name == 'main'
         run: |
           echo "PUBLISH=onTagOrDraft" >> $GITHUB_ENV
-          # Electron Builder needs our GitHub token to publish the app.
-          echo "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
 
       - name: Extract Composer and make application
         run: |
           cp ./build/buildroot/bin/php ./bin
-          source make.sh
+          composer run extract --working-dir=build
+          chmod +x ./bin/php
+          curl https://curl.haxx.se/ca/cacert.pem --fail --location --output cacert.pem
+          yarn run build
           npx electron-builder --publish=${{ env.PUBLISH }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # For manual testing, upload the built artifact directly if we're not publishing it.
       - name: Upload distributable
         if: ${{ env.PUBLISH == 'never' }}
         uses: actions/upload-artifact@v4
